src/local/src/tests/snapshots/liquid_cache_local__tests__os_selection.snap
---
source: src/local/src/tests/mod.rs
expression: "format!(\"plan: \\n{}\\nvalues: \\n{}\\nstats:\\n{}\", plan, values, stats)"
---
plan: 
┌───────────────────────────┐
│          SortExec         │
│    --------------------   │
│         OS@0 DESC         │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│                           │
│          format:          │
│       liquid_parquet      │
└───────────────────────────┘

values: 
+----+
| OS |
+----+
| 44 |
| 44 |
| 44 |
| 44 |
| 44 |
| 2  |
| 2  |
| 2  |
| 2  |
| 2  |
| 2  |
+----+
stats:
entries.total: 8
entries.after_first_run: 8
entries.memory.arrow: 1
entries.memory.liquid: 7
entries.memory.squeezed_liquid: 0
entries.disk.liquid: 0
entries.disk.arrow: 0
usage.memory_bytes: 461158
usage.disk_bytes: 459960
RuntimeStatsSnapshot:
  get: 3
  get_with_selection: 3
  eval_predicate: 4
  get_predicate_squeezed_success: 0
  get_predicate_squeezed_needs_io: 2
  get_squeezed_success: 0
  get_squeezed_needs_io: 3
  try_read_liquid_calls: 0
  hit_date32_expression_calls: 0
