src/local/src/tests/snapshots/liquid_cache_local__tests__referer_filtering.snap
---
source: src/local/src/tests/mod.rs
expression: "format!(\"plan: \\n{}\\nvalues: \\n{}\\nstats:\\n{}\", plan, values, stats)"
---
plan: 
┌───────────────────────────┐
│          SortExec         │
│    --------------------   │
│       Referer@0 DESC      │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│                           │
│          format:          │
│       liquid_parquet      │
└───────────────────────────┘

values: 
+---------------------------------------------------------------------------------------------------------+
| Referer                                                                                                 |
+---------------------------------------------------------------------------------------------------------+
| https://go.mail/folder-1/online.ru/search?text=скачать из                                               |
| http://tambov.irr.ru/registrict=2660628&cbv=r2013%2F&ei                                                 |
| http://tambov.irr.ru/registrict=2660628&cbv=r2013%2F&ei                                                 |
| http://tambov.irr.ru/registrict=2660628&cbv=r2013%26ev_positions/2/transmittaD3xnA%26ad%3D1%26bid%3D400 |
| http://tambov.irr.ru/registrict=2660628&cbv=r2013%26ev_pl%3Dh%26utm_source=view.php                     |
| http://tambov.irr.ru/registrict=2660628&cbv=r2013%26ev_pl%3Dh%26utm_source=view.php                     |
| http://tambov.irr.ru/filmId=BcVrXpM5UXI&where=any&numphoto                                              |
| http://tambov.irr.ru/filmId=BcVrXpM5UXI&where=any&numphoto                                              |
| http://tambov.irr.ru/avtoma-gorod55.ru/cars/micros/out-of-town                                          |
| http://tambov.irr.ru/avtoma-gorod55.ru/cars/micros/out-of-town                                          |
+---------------------------------------------------------------------------------------------------------+
stats:
entries.total: 8
entries.after_first_run: 8
entries.memory.arrow: 2
entries.memory.liquid: 6
entries.memory.squeezed_liquid: 0
entries.disk.liquid: 0
entries.disk.arrow: 0
usage.memory_bytes: 880240
usage.disk_bytes: 719712
RuntimeStatsSnapshot:
  get: 2
  get_with_selection: 2
  eval_predicate: 8
  get_predicate_squeezed_success: 0
  get_predicate_squeezed_needs_io: 0
  get_squeezed_success: 0
  get_squeezed_needs_io: 0
  try_read_liquid_calls: 0
  hit_date32_expression_calls: 0
