src/local/src/tests/snapshots/liquid_cache_local__tests__url_selection_and_ordering.snap
---
source: src/local/src/tests/mod.rs
expression: "format!(\"plan: \\n{}\\nvalues: \\n{}\\nstats:\\n{}\", plan, values, stats)"
---
plan: 
┌───────────────────────────┐
│          SortExec         │
│    --------------------   │
│         URL@0 DESC        │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│                           │
│          format:          │
│       liquid_parquet      │
└───────────────────────────┘

values: 
+-------------------------------------------------------------------------------------------------------------------------------+
| URL                                                                                                                           |
+-------------------------------------------------------------------------------------------------------------------------------+
| https://produkty%2Fpulove.ru/search_terms-vzyat_kobrye-russion/russia/piterators-tourse                                       |
| https://produkty%2Fpulove.ru/search_terms-vzyat_kobrye-russion/russia/piterators-tourse                                       |
| https://produkty%2Fpulove.ru/booklyattion-ware/tours.ru                                                                       |
| https://produkty%2Fpulove.ru/booklyattion-ware/tours.ru                                                                       |
| https://produkty%2Fpulove.ru/booklyattion-ware/activaro.ru/cars.ru/footours-index.ru/files/item=11497449%26pz%3D0             |
| https://produkty%2Fpulove.ru/booklyattion-ware/activaro.ru/cars.ru/footours-index.ru/files/item=11497449%26pz%3D0             |
| https://produkty%2Fpulove.ru/booklyattion-ware/activaro.ru/cars.ru/footours-index.ru/files/item=11497449%26pz%3D0             |
| https://produkty%2Fpulove.ru/booklyattion-ware/activaro.ru/cars.ru/footours-index.ru/files/item=11497449%26pz%3D0             |
| https://produkty%2Fplata.ru/filmId=e308f57e213e9eee96bcb752910-widget/tours.ru/product_priznaniya-1-metallic=0&engineVolumeTo |
| https://produkty%2Fplata.ru/filmId=e308f57e213e9eee96bcb752910-widget/tours.ru/product_priznaniya-1-metallic=0&engineVolumeTo |
| http://tours/Ekategoriya%2F&sr=http://slovareniye                                                                             |
+-------------------------------------------------------------------------------------------------------------------------------+
stats:
entries.total: 4
entries.after_first_run: 4
entries.memory.arrow: 0
entries.memory.liquid: 2
entries.memory.squeezed_liquid: 1
entries.disk.liquid: 1
entries.disk.arrow: 0
usage.memory_bytes: 188334
usage.disk_bytes: 1155261
RuntimeStatsSnapshot:
  get_arrow_array_calls: 0
  get_with_selection_calls: 3
  get_with_predicate_calls: 4
  get_predicate_squeezed_success: 0
  get_predicate_squeezed_needs_io: 0
  get_predicate_squeezed_unsupported: 0
  get_squeezed_success: 0
  get_squeezed_needs_io: 0
  try_read_liquid_calls: 0
  hit_date32_expression_calls: 0
